# agentx

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
config/: analysis_terms.csv  planner_lexicon.csv
docs/: _config.yml  blackboard.md  deployment.md  enterprise_agent_design.md  enterprise_agent_design_v0.1.md  enterprise_agent_design_v0.3.md  evaluation-layer.md  index.md  planner-lexicon.md  planner.md  powerbanana-current-design.md  regression-and-calibration.md  repository-hygiene.md  repository-workflow.md
evals/: README.md
evals/calibration_cases/: dataset_version_mismatch_should_block.json  missing_evidence_should_block.json  safe_prompt_injection_should_warn.json  unsafe_security_action_should_human_review.json  valid_analysis_should_pass.json  wrong_top_value_should_block.json
evals/golden_cases/: ambiguous_performance_question.json  channel_conversion.json  conversion_rate_basic.csv  conversion_rate_basic.json  conversion_rate_tie_first_seen.csv  (+19 more)
powerbanana/: __init__.py  agent.py  analysis_request.py  blackboard.py  cli.py  context.py  dag.py  evals.py  evaluation.py  golden_promotion.py  llm.py  llm_vocabulary.py  memory.py  models.py  plan.py  planner.py  planner_lexicon.py  policies.py  skills.py  subagents.py  tools.py  vocabulary.py
tests/: README.md  test_analysis_request.py  test_cli.py  test_golden_promotion.py  test_governance.py  test_llm_vocabulary.py  test_planner_evaluation.py  test_planner_golden_cases.py  test_planner_lexicon.py  test_powerbanana.py  test_vocabulary_advisor_golden_cases.py  test_vocabulary_manager.py
(+35 files in other folders)
